--- a/css/movieInfo.css
+++ b/css/movieInfo.css
@@ -11,7 +11,6 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
-
 /* Start Nav Styles */
 .nav {
     z-index: 4;
@@ -91,20 +90,20 @@ html {
 }
 /* End Nav Styles */
 
-/* Container Styles */
+/* Start Body Styles */
 .container {
     padding-top: 8vh;
 }
 
-.fa-chevron-left, .fa-chevron-right {
+.castPrev, .castNext {
     transition: color .2s;
 }
 
-.fa-chevron-left:hover {
+.castPrev:hover {
     color: white;
 }
 
-.fa-chevron-right:hover {
+.castNext:hover {
     color: white;
 }
 
@@ -137,37 +136,10 @@ html {
     min-width: 100vw;
 }
 
-/* Slider Styles */
-.movie-slider {
-    width: 100%;
-    height: 92vh;
-    overflow: hidden;
-}
-
 .movie {
     width: 100%;
     height: 92vh;
     display: inline-block;
-}
-
-.next {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    right: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
-}
-
-.prev {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    left: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
 }
 
 /* Movie Poster and Info Styles */
@@ -180,6 +152,10 @@ html {
     width: auto;
     display: flex;
     color: #fff;
+}
+
+.backdropContainer {
+    border-bottom: 2px solid #3BBA9C;
 }
 
 .poster {
@@ -212,14 +188,61 @@ html {
 }
 /* End Backdrop Styles */
 
-/* Start Discover Movies Styles */
-.discoverMovies {
-    height: auto;
+/* Start Movie Info Styles */
+.movieInformation {
+    position: relative;
+    margin-top: -4px;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    width: 100%;
+    color: white;
     background: linear-gradient(165deg, #54556A 0%, #43455C 45%);
-    border-top: 2px solid #3BBA9C;
-    border-bottom: 2px solid #3BBA9C;
 }
 
+/* Start Summary Styles */
+
+.summary {
+    position: relative;
+    width: 100%;
+    color: white;
+}
+
+.summary h1 {
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+
+.overview {
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+    padding-bottom: 50px;
+}
+
+.summary p {
+    width: 100%;
+    text-align: left;
+}
+
+/* End Summary Styles */
+
+/* Start Cast Styles */
+.cast {
+    position: relative;
+    width: 100%;
+    color: white;
+}
+
+.cast h1 {
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+
+/* Cast Icon Styles */
 .movieThumbnail {
     display: inline-block;
     position: relative;
@@ -228,65 +251,15 @@ html {
     width: 166px;
     height: 350px;
     margin: 10px 14px;
-    transition: all .2s;
-}
-
-.movieThumbnail:hover {
-    transform: scale(1.02);
-    filter: brightness(100%);
-}
-
-.thumbInfo {
-    width: 160px;
-}
-
-.discoverableMovies {
-    border-style: solid;
-    border-image: linear-gradient(to left, rgba(0, 0, 0, 0) 20%, rgb(165, 165, 165) 50%, rgba(0, 0, 0, 0) 80%) 
-                0 0 100% 0/0 0 2px 0 stretch;
-}
-
-.upcoming {
-    position: relative;
-    /* border: 1px solid red; */
-    margin-top: 100px;
-    margin-bottom: 75px;
-    width: 100%;
-    color: white;
-}
-
-.upcoming h1 {
-    width: 82%;
-    text-align: left;
-    margin: 0 auto;
-    padding-bottom: 15px;
-}
-
-.upcoming-slider {
-    width: 84%;
-    margin: 0 auto;
-    overflow: hidden;
-    height: 350px;
 }
 
 .thumbPoster {
     width: 165px;
     border-radius: 5px;
-    cursor: pointer;
 }
 
-.poster {
-    cursor: pointer;
-}
-
-.thumbRating {
-    position: absolute;
-    top: 15px;
-    background: rgba(0, 0, 0, .5);
-    padding-left: 5px;
-    line-height: 25px;
-    height: 25px;
-    width: 60px;
+.thumbInfo {
+    width: 160px;
 }
 
 .thumbTitle {
@@ -298,51 +271,15 @@ html {
     color: rgb(190, 190, 190);
 }
 
-.upcomingNext {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    right: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
-}
-
-.upcomingPrev {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    left: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
-}
-
-/* Popular Styles */
-.popular {
-    position: relative;
-    /* border: 1px solid red; */
-    margin-top: 75px;
-    margin-bottom: 75px;
-    width: 100%;
-    color: white;
-}
-
-.popular h1 {
-    width: 82%;
-    text-align: left;
-    margin: 0 auto;
-    padding-bottom: 15px;
-}
-
-.popular-slider {
+/* Cast Sliders */
+.cast-slider {
     width: 84%;
     margin: 0 auto;
     overflow: hidden;
     height: 350px;
 }
 
-.popularNext {
+.castNext {
     z-index: 3;
     position: absolute;
     top: 50%;
@@ -352,7 +289,7 @@ html {
     cursor: pointer;
 }
 
-.popularPrev {
+.castPrev {
     z-index: 3;
     position: absolute;
     top: 50%;
@@ -362,67 +299,43 @@ html {
     cursor: pointer;
 }
 
+/* End Cast Styles */
 
-/* topRated Styles */
-.topRated {
+/* Start Trailer Styles */
+.trailers {
     position: relative;
-    /* border: 1px solid red; */
-    margin-bottom: 100px;
-    margin-top: 75px;
     width: 100%;
     color: white;
 }
 
-.topRated h1 {
-    width: 82%;
+.trailers h1 {
+    width: 80%;
     text-align: left;
     margin: 0 auto;
     padding-bottom: 15px;
 }
 
-.topRated-slider {
-    width: 84%;
+.trailers .test {
+    width: 80%;
     margin: 0 auto;
-    overflow: hidden;
-    height: 350px;
 }
 
-.topRatedNext {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    right: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
+.trailers iframe {
+    padding-right: 50px;
 }
 
-.topRatedPrev {
-    z-index: 3;
-    position: absolute;
-    top: 50%;
-    left: 35px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 2em;
-    cursor: pointer;
-}
+/* End Trailer Styles */
 
-/* End Discover Movies Styles */
+/* End Movie Info Styles */
+
+/* End Body Styles */
 
 /* Start Footer Styles */
-/* footer a {
-    color: #707793;
-}
-
-footer {
-    background-color: #2E3047;
-    color: #707793;
-} */
-
 footer {
     height: auto;
     background-color: #2E3047;
     color: #707793;
+    border-top: 2px solid #3BBA9C;
 }
 
 footer img {
