--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,12 @@ html {
     transition: all .2s;
 }
 
+.movieThumbnail:focus {
+    outline: 0;
+    transform: scale(1.02);
+    filter: brightness(100%);
+}
+
 .movieThumbnail:hover {
     transform: scale(1.02);
     filter: brightness(100%);
